Update: #74: Make sure loading info text does not make the entire player move when too long WIP: #3: Restored nowrap for big-info which was removed earlier by mistake

--- a/skins/default/musicco.css
+++ b/skins/default/musicco.css
@@ -46,7 +46,8 @@
 	.panel,
 	#volume-value,
 	#updateCoverArt,
-	#bigPlayer {
+	#bigPlayer,
+	#loadingInfo {
 		-webkit-user-select: none;
 		-ms-user-select: none;
 		-moz-user-select: none;
@@ -577,6 +578,13 @@
 		-webkit-user-select: text;
 		-ms-user-select: text;
 		-moz-user-select: text;
+	}
+
+	.node,
+	#nowPlayingAlbum,
+	#nowPlayingArtist,
+	#nowPlayingTitle,
+	#header {
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
